# okayGo

./: .gitignore  CMakeLists.txt
hangMan/include/: WordHelper.hpp
hangMan/resources/: words.txt
hangMan/src/: WordHelper.cpp  main.cpp
src/: main.cpp
